--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,15 @@
 html{
     font-size: 62,5%;
 }
+
+@media screen and (max-width: 600px) {
+    #div {
+    font-size: 50px;
+    }
+    .col{
+        size: 50%;
+    } 
+}
 nav{
     height: 100%;
 }
@@ -17,6 +26,8 @@ nav{
 .background{
 background-image: url(../images/fondomain.jpg);
 background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
 color: white;
 }
 .background1{
@@ -40,13 +51,51 @@ background-size: cover;
     color: white;
 }
 
-header{
-    
-    background-color: black;
-    height: 80px;
+.bg-body-tertiary {
+    --bs-bg-opacity: 1;
+    background-color:black !important;
 }
 
+.container-fluid{
+    background-color: black;
+}
 
+.navbar-collapse{
+    background-color: black;
+    
+}
+
+.navbar-nav{
+    background-color: black;
+    color: white;
+    --bs-nav-link-color: white;
+    --bs-nav-link-hover-color: var(--bs-gray-400);
+    --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+}
+.navbar-nav{
+    background-color: black;
+    color: white;
+    --bs-nav-link-color: white;
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    --bs-nav-link-hover-color: var(--bs-gray-600);
+    --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+    
+}
+
+.navbar-brand{
+    padding-top: var(--bs-navbar-brand-padding-y);
+    padding-bottom: var(--bs-navbar-brand-padding-y);
+    margin-right: var(--bs-navbar-brand-margin-end);
+    font-size: var(--bs-navbar-brand-font-size);
+    color: white;
+    background-color: grey;
+    text-decoration: none;
+    white-space: nowrap;
+}
 .titulo{
     font-size: 30px;
     padding: 20px;
@@ -112,7 +161,7 @@ h1{
     border: 2px solid black;
     width: 470px;
     height: 300px;
-    margin-left: 420px;
+    margin-left: 300px;
 }
 .textoaraña1{
     border: 2px solid black;
@@ -194,7 +243,7 @@ margin-right: 20px;
     border: 2px solid black;
     width: 470px;
     height: 300px;
-    margin-left: 420px;
+    margin-left: 320px;
 }
 
 .Escarabajotexto1{
@@ -368,4 +417,15 @@ margin-left: 10px;
     height: 50px;
     width: 50px;
     list-style:none;
+}
+
+.navbar-toggler {
+    padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
+    font-size: var(--bs-navbar-toggler-font-size);
+    line-height: 1;
+    color: var(--bs-navbar-color);
+    background-color: white;
+    border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
+    border-radius: var(--bs-navbar-toggler-border-radius);
+    transition: var(--bs-navbar-toggler-transition);
 }
