--- a/css/estilos.css
+++ b/css/estilos.css
@@ -172,7 +172,7 @@ h1{
     margin-left:220px;
     font-size: 15px;
     width: 500px;
-    overflow: auto;
+    overflow: scroll;
 }
 
 .avispatxt1{
