--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,22 +86,22 @@ html, body{
     }
     .col-sm-3{
 
-        width: 33%;
+        width: 100%;
         font-size: 70%;
     }
     .col-6{
         width:30%;
     }
 
-    .col-2 iframe{
-        width: 40%;
+    .col-2{
+        width: 100%;
     }
     .col-2 iframe{
         width: 100%;
     }
 
     .col-3{
-        width: 20%; 
+        width:100%; 
     }
 
     .col-7{
