--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,11 +49,45 @@ html, body{
 }
 
 .col-2{
+    justify-content: center;
     overflow: clip;
     width: 40%;
     font-size: 100%;
     border: 2px dotted yellow;
 }
+
+.col-2 iframe{
+    overflow: clip;
+    width: 400px;
+    max-width:100%;
+    height: 500px;
+    font-size: 100%;
+    
+}
+.col-8{
+    margin-top: 130px;
+    max-width: 50%;
+    width: 100%;
+    color: white;
+    justify-content: center;
+}
+
+.col-8avs{
+    max-width: 50%;
+    border: 2px solid yellow;
+    width: 100%;
+    color: white;
+    justify-content: center;
+}
+.col-2 img{
+    overflow: clip;
+    width: 400px;
+    max-width:100%;
+    height: 300px;
+    font-size: 100%;
+    margin-top: 80px;
+}
+
 
 .col-3{
     overflow: clip;
@@ -62,11 +96,63 @@ html, body{
     border: 2px double yellow;
 }
 
+.col-2avispa{
+    justify-content: center;
+
+    overflow: clip;
+    width: 40%;
+    font-size: 100%;
+
+}
+
+.col-2avispa iframe{
+    overflow: clip;
+    width: 400px;
+    max-width:100%;
+    height: 500px;
+    font-size: 100%;
+    
+}
+
+.col-2avispa img{
+    overflow: clip;
+    width: 400px;
+    max-width:100%;
+    height: 300px;
+    font-size: 100%;
+    margin-top: 80px;
+}
+
+.avispacaja1{
+    border: 2px solid black;
+    margin-bottom: 20px;
+}
+
+
+.col-3avispa{
+    overflow: clip;
+    width: 20%;
+    font-size: 100%;
+    text-align: center;
+    margin-top: 150px;
+}
 
 
 
 @media screen and (max-width: 600px){
 
+    .col-8{
+        width: 100%;
+        font-size: 70%;
+        max-width: 100%;
+    }
+    .col-sm-4avs{
+        max-width: 100%;
+    }
+
+    .col-8 iframe{
+        max-width: 100%;
+    }
     #div {
     font-size: 50px;
     }
@@ -96,12 +182,21 @@ html, body{
     .col-2{
         width: 100%;
     }
+
+    .col-2avispa{
+        width: 100%;
+    }
     .col-2 iframe{
         width: 100%;
     }
 
     .col-3{
         width:100%; 
+    }
+
+    .col-3avispa{
+        width: 100%;
+        text-size-adjust: 100%;
     }
 
     .col-7{
