--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,6 +31,16 @@ html, body{
     border: 2px double yellow;
 
 }
+
+.col-7ara{
+
+    overflow: clip;
+    width: 20%;
+    font-size: 100%;
+    border: 2px double rgb(18, 194, 18);
+
+}
+
 .col-5{
 
     overflow: clip;
@@ -48,12 +58,37 @@ html, body{
     margin: 2px;
 }
 
+.col-6esc{
+
+    overflow: clip;
+    width: 30%;
+    font-size: 100%;
+    margin: 2px;
+}
+
+.col-6ara{
+
+    overflow: clip;
+    width: 30%;
+    font-size: 100%;
+    border: 2px  dotted rgb(18, 194, 18);
+    margin: 2px;
+}
+
 .col-2{
     justify-content: center;
     overflow: clip;
     width: 40%;
     font-size: 100%;
     border: 2px dotted yellow;
+}
+
+.col-2ara{
+    justify-content: center;
+    overflow: clip;
+    width: 40%;
+    font-size: 100%;
+    border: 2px dotted rgb(18, 194, 18);
 }
 
 .col-2 iframe{
@@ -73,11 +108,11 @@ html, body{
 }
 
 .col-8avs{
-    max-width: 50%;
-    border: 2px solid yellow;
-    width: 100%;
-    color: white;
-    justify-content: center;
+    overflow: clip;
+    width: 600px;
+    max-width:100%;
+    height: 500px;
+    font-size: 100%;
 }
 .col-2 img{
     overflow: clip;
@@ -96,9 +131,16 @@ html, body{
     border: 2px double yellow;
 }
 
+
+.col-3ara{
+    overflow: clip;
+    width: 20%;
+    font-size: 100%;
+    border: 2px double rgb(18, 194, 18);
+}
+
 .col-2avispa{
     justify-content: center;
-
     overflow: clip;
     width: 40%;
     font-size: 100%;
@@ -137,15 +179,45 @@ html, body{
     margin-top: 150px;
 }
 
+.col-1esca{
+    max-width: 20%;
+    border: 2px white solid;
+}
+
+.col-sm-5avs{
+    max-width: 100%;
+
+}
 
 
 @media screen and (max-width: 600px){
+
+    .col-1esca{
+        max-width: 100%;
+    }
+
+    .col-sm-4esc{
+        max-width: 100%;
+        width: 100%;
+    }
+    
 
     .col-8{
         width: 100%;
         font-size: 70%;
         max-width: 100%;
     }
+
+    .col-8avs{
+        max-width: 100%;
+        size: 30%;
+    }
+
+    .col-sm-5avs{
+        max-width: 200%;
+        width: 600px;
+    }
+
     .col-sm-4avs{
         max-width: 100%;
     }
@@ -177,6 +249,10 @@ html, body{
     }
     .col-6{
         width:30%;
+    }
+
+    .col-6esca{
+        width:100%;
     }
 
     .col-2{
@@ -315,11 +391,9 @@ background-size: cover;
     justify-content: space-around;
     height: 100%;
     align-content: center;
-}
-
-.titulo{
     list-style-type: none;
 }
+
 
 .titulo li a{
     text-decoration: none;
@@ -369,21 +443,7 @@ font-family: 'Times New Roman', Times, serif;
     font-size: 100%;
 }
 
-.avispatxt1{
-    text-align: center;
-    font-size: 40px;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-.avispatxt2{
-    margin-left: 20px;
-    margin-top: 5px;
-}
 
-.avispacaja1{  
-    display: flex;
-    margin-top: 20px;
-}
 .avispa1{ 
     margin-left: 20px;
     border: 2px solid black;
@@ -397,29 +457,14 @@ font-family: 'Times New Roman', Times, serif;
     width: 600px;
 }
 
-.avispacaja{  
-    display: flex;
-    margin-left: 20px;
-    margin-top: 20px;
-    border: 2px solid black;
-    width: 1480px;
-    height: 532;
-    overflow: visible;
-}
+
 
 .queganasdecomplicarme{
 padding-top: 40px;
 margin-right: 20px;
 }
 
-.nidoavispacaja{
-    display: flex;
-    margin-top: 20px;
-    border: 2px solid black;
-    width: 1100px;
-    height: 544px;
-    margin-left: 300px;
-}
+
 
 .escaratxt1{
     text-align: center;
@@ -453,18 +498,18 @@ margin-right: 20px;
 }
 
 .cajaara1{
-    border: 2px double yellow;
+    border: 2px double rgb(43, 218, 43);
     display: flex;
     max-width: 100%;
 }
 
 .cajaara2{
-    border: 2px dotted yellow;
+    border: 2px dotted rgb(43, 218, 43);
     display: flex;
     max-width: 100%;
 }
 .arañasborder{
-    border: 2px solid yellow;
+    border: 2px solid rgb(43, 218, 43);
     margin: auto;
     max-width: 100%;
     height: 200px;
