--- a/css/estilos.css
+++ b/css/estilos.css
@@ -248,7 +248,7 @@ html, body{
         font-size: 70%;
     }
     .col-6{
-        width:30%;
+        width:100%;
     }
 
     .col-6esca{
@@ -276,8 +276,13 @@ html, body{
     }
 
     .col-7{
-        width:20%;
+        width:100%;
     }
+
+    .col-5{
+        width:100%;
+    }
+
 
     .img-fluid{
         justify-content: center;
