--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -147,7 +147,7 @@ html, body{
     }
 
     .col-6ara{
-        width:50%;
+        width:100%;
         max-width: 100%;
     }
 
@@ -186,7 +186,7 @@ html, body{
     }
 
     .col-7ara{
-        width:50%;
+        width:100%;
     }
 
     .col-5{
@@ -202,8 +202,9 @@ html, body{
     }
 
     .cajaara1{
-        display: flex;
+        display: block;
         max-width: 100%;
+        margin-bottom: 10px;
     }
 }
 nav{
