--- a/css/estilos.css
+++ b/css/estilos.css
@@ -249,6 +249,20 @@ footer ul li {
   width: 1500px;
 }
 
+.col-7abeja {
+  overflow: clip;
+  width: 20%;
+  font-size: 100%;
+  border: 2px double yellow;
+}
+
+.col-5abeja {
+  overflow: clip;
+  width: 40%;
+  font-size: 100%;
+  border: 2px dotted yellow;
+}
+
 .col-7 {
   overflow: clip;
   width: 20%;
@@ -417,10 +431,16 @@ html, body {
   .col-7 {
     width: 90%;
   }
+  .col-7abeja {
+    width: 90%;
+  }
   .col-7ara {
     width: 100%;
   }
   .col-5 {
+    width: 100%;
+  }
+  .col-5abeja {
     width: 100%;
   }
   .img-fluid {
@@ -498,6 +518,8 @@ nav {
   --bs-nav-link-color: white;
   --bs-nav-link-hover-color: var(--bs-gray-400);
   --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+  justify-content: space-around;
+  width: 500px;
 }
 
 .navbar-nav {
@@ -511,17 +533,39 @@ nav {
   list-style: none;
   --bs-nav-link-hover-color: var(--bs-gray-600);
   --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+  background-image: linear-gradient(to right, #16A085 0%, #F4D03F 51%, #16A085 100%);
+  background-size: 300%;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  transition: 2.5s;
+  text-decoration: none;
 }
 
 .navbar-brand {
   padding-top: var(--bs-navbar-brand-padding-y);
   padding-bottom: var(--bs-navbar-brand-padding-y);
-  margin-right: var(--bs-navbar-brand-margin-end);
+  margin-left: 10px;
   font-size: var(--bs-navbar-brand-font-size);
   color: white;
-  background-color: grey;
   text-decoration: none;
   white-space: nowrap;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #16A085 0%, #F4D03F 51%, #16A085 100%);
+  background-size: 300%;
+  box-shadow: 0 0 20px #eee;
+  text-decoration: none;
+}
+
+.navbar-brand:hover {
+  background-position: right;
+  transition: 1s background-position ease-in-out;
+  color: black;
+}
+
+.navbar-nav:hover {
+  background-position: right;
+  transition: 1s background-position ease-in-out;
+  color: black;
 }
 
 .titulo {
