--- a/sass/_Abejas.scss
+++ b/sass/_Abejas.scss
@@ -3,3 +3,17 @@
     margin-top: 20px;
     width: 1500px;
 }
+
+.col-7abeja{
+    overflow: clip;
+    width: 20%;
+    font-size: 100%;
+    border: 2px double yellow;
+}
+
+.col-5abeja{
+    overflow: clip;
+    width: 40%;
+    font-size: 100%;
+    border: 2px dotted yellow;
+}
