--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -185,11 +185,19 @@ html, body{
         width:90%;
     }
 
+    .col-7abeja{
+        width:90%;
+    }
+
     .col-7ara{
         width:100%;
     }
 
     .col-5{
+        width:100%;
+    }
+
+    .col-5abeja{
         width:100%;
     }
 
@@ -270,7 +278,11 @@ background-size: cover;
     --bs-nav-link-color: white;
     --bs-nav-link-hover-color: var(--bs-gray-400);
     --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+    justify-content: space-around;
+    width: 500px;
+
 }
+
 
 .navbar-nav{
     background-color: black;
@@ -283,20 +295,43 @@ background-size: cover;
     list-style: none;
     --bs-nav-link-hover-color: var(--bs-gray-600);
     --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
-    
+    background-image: linear-gradient(to right, #16A085 0%, #F4D03F 51%, #16A085 100%);
+    background-size: 300%;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    transition: 2.5s;
+    text-decoration: none;
+
 }
+
 
 .navbar-brand{
     padding-top: var(--bs-navbar-brand-padding-y);
     padding-bottom: var(--bs-navbar-brand-padding-y);
-    margin-right: var(--bs-navbar-brand-margin-end);
+    margin-left: 10px;
     font-size: var(--bs-navbar-brand-font-size);
     color: white;
-    background-color: grey;
     text-decoration: none;
     white-space: nowrap;
-    
+    border-radius: 10px;
+    background-image: linear-gradient(to right, #16A085 0%, #F4D03F 51%, #16A085 100%);
+    background-size: 300%;
+    box-shadow: 0 0 20px #eee;
+    text-decoration: none;
 }
+
+.navbar-brand:hover{
+    background-position: right;
+    transition: 1s background-position ease-in-out;
+    color:black
+}
+
+.navbar-nav:hover{
+    background-position: right;
+    transition: 1s background-position ease-in-out;
+    color:black
+}
+    
 .titulo{
     font-size: 30px;
     padding: 20px;
