--- a/css/estilos.css
+++ b/css/estilos.css
@@ -189,7 +189,8 @@ footer ul li {
   width: 30%;
   font-size: 100%;
   border: 2px dotted rgb(18, 194, 18);
-  margin: 2px;
+  margin: 60px 0px 160px 0px;
+  justify-content: center;
 }
 
 .col-2ara {
@@ -217,6 +218,13 @@ footer ul li {
   font-size: 20px;
 }
 
+.arañasonlydescrip1{
+  color: rgb(18, 194, 18);
+  font-size: 20px;
+  padding-top: 80px;
+}
+
+
 .arañacaja1 {
   display: flex;
   padding-top: 20px;
@@ -227,6 +235,7 @@ footer ul li {
   border: 2px double rgb(18, 194, 18);
   display: flex;
   max-width: 100%;
+  margin-bottom: 20px;
 }
 
 .cajaara2 {
@@ -261,6 +270,7 @@ footer ul li {
   width: 40%;
   font-size: 100%;
   border: 2px dotted yellow;
+
 }
 
 .col-7 {
@@ -454,6 +464,18 @@ html, body {
     display: block;
     max-width: 100%;
     margin-bottom: 10px;
+  }
+
+  .arañasonlydescrip {
+    color: rgb(18, 194, 18);
+    font-size: 20px;
+    padding-top: 0px;
+  }
+
+  .arañasonlydescrip1{
+    color: rgb(18, 194, 18);
+    font-size: 20px;
+    padding-top: 0px;
   }
 }
 nav {
