--- a/css/estilos.css
+++ b/css/estilos.css
@@ -200,6 +200,7 @@ footer ul li {
   border: 2px dotted rgb(18, 194, 18);
   margin: 60px 0px 160px 0px;
   justify-content: center;
+  flex: wrap;
 }
 
 .col-2ara {
