--- a/css/estilos.css
+++ b/css/estilos.css
@@ -185,14 +185,16 @@ footer ul li {
   overflow: clip;
   width: 20%;
   font-size: 100%;
+  text-align: center;
   border: 2px double rgb(18, 194, 18);
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.63);
 }
 
 .col-6ara {
   overflow: clip;
   width: 30%;
   font-size: 100%;
-  border: 2px dotted rgb(18, 194, 18);
   margin: 60px 0px 160px 0px;
   justify-content: center;
   flex: wrap;
@@ -211,20 +213,21 @@ footer ul li {
   width: 20%;
   font-size: 100%;
   border: 2px double rgb(18, 194, 18);
+  background-color: rgba(0, 0, 0, 0.575);
 }
 
 .arañasonly {
-  color: rgb(18, 194, 18);
+  color: white;
   font-size: 30px;
 }
 
 .arañasonlydescrip {
-  color: rgb(18, 194, 18);
+  color: white;
   font-size: 20px;
 }
 
 .arañasonlydescrip1{
-  color: rgb(18, 194, 18);
+  color: white;
   font-size: 20px;
   padding-top: 80px;
 }
@@ -237,14 +240,13 @@ footer ul li {
 }
 
 .cajaara1 {
-  border: 2px double rgb(18, 194, 18);
   display: flex;
   max-width: 100%;
   margin-bottom: 20px;
 }
 
 .cajaara2 {
-  border: 2px dotted rgb(18, 194, 18);
+  border: 2px dotted black;
   display: flex;
   max-width: 100%;
 }
@@ -472,13 +474,13 @@ html, body {
   }
 
   .arañasonlydescrip {
-    color: rgb(18, 194, 18);
+    color: white;
     font-size: 20px;
     padding-top: 0px;
   }
 
   .arañasonlydescrip1{
-    color: rgb(18, 194, 18);
+    color: white;
     font-size: 20px;
     padding-top: 0px;
   }
@@ -504,7 +506,7 @@ nav {
 }
 
 .background1 {
-  background-image: url(../images/panal\ de\ abeja.jpg);
+  background-image: url(../images/abejafondo.jpg);
   background-size: cover;
 }
 
