--- a/css/estilos.css
+++ b/css/estilos.css
@@ -184,6 +184,7 @@ footer ul li {
 
 .col-7ara {
   overflow: clip;
+  padding-top: 90px;
   width: 20%;
   font-size: 100%;
   text-align: center;
@@ -291,17 +292,18 @@ footer ul li {
 }
 
 .col-5 {
+  padding-top: 90px;
   overflow: clip;
   width: 35%;
   font-size: 100%;
-  border: 2px dotted yellow;
+  
 }
 
 .col-6 {
+  padding-top: 60px;
   overflow: clip;
   width: 30%;
   font-size: 100%;
-  border: 2px dotted yellow;
   margin: 2px;
 }
 
@@ -679,6 +681,15 @@ h1 {
   font-size: 100%;
 }
 
+.textodescrip1esc{
+  margin-top: 60px;
+  width: auto;
+  font-size: 20px;
+  border: 2px solid black;
+  overflow: clip;
+  font-size: 100%;
+}
+
 .textodescrip1abeja {
   width: auto;
   font-size: 20px;
@@ -691,7 +702,7 @@ h1 {
 
 .textodescrip1avips {
   width: auto;
-  font-size: 40px;
+  font-size: 60px;
   border: 2px solid black;
   overflow: clip;
   font-size: 100%;
